# webserve

./: .gitignore  LICENSE  README.md  pyproject.toml
src/webserve/: __main__.py  server.py
src/webserve/static/: display.js  index.html  main.css  stream.js
