[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "webserve"
description = "Small vLLM-powered tool for serving models from HuggingFace in Web"
requires-python = ">=3.10"
dynamic = ["version"]
license = {text = "MIT"}

dependencies = [
    "transformers>=4.57.0",
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
    "websockets>=15.0.1",
    "vllm>=0.11.0"
]

authors = [
    { name="Nikolay Georgiev" },
    { name="Nikolay Georgiev", email="nygeorgiev@protonmail.com" }
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ['webserve']

[tool.setuptools.package-data]
webserve = ['static/*']

[project.scripts]
webserve = "webserve.__main__:main"

[project.urls]
Repository = "https://github.com/nygeorgiev/webserve"

[tool.setuptools.dynamic]
version = { attr = "webserve.__version__.__version__" }